HTML example now loads (#80).